fix(fix-movelists-arrows): decrease the z-index for up-arrow and down-arrow in One-pokemon-page.css, and decrease the z-index for up-arrow and down-arrow in EnemyPokemon.css

--- a/pokemon-app/src/styles/EnemyPokemon.css
+++ b/pokemon-app/src/styles/EnemyPokemon.css
@@ -176,7 +176,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-bottom: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -192,7 +192,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-top: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
