--- a/pokemon-app/src/styles/One-pokemon-page.css
+++ b/pokemon-app/src/styles/One-pokemon-page.css
@@ -144,7 +144,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-bottom: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -159,7 +159,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-bottom: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -175,7 +175,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-top: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -190,7 +190,7 @@
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-top: 7px solid #b11501;
-  z-index: 100;
+  z-index: 3;
   animation-duration: 0.8s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
